--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: QRL - The Quantum Resistant Ledger
+email: info@theqrl.org
 description: >- # this means to ignore newlines until "baseurl:"
   The Quantum Resistant Ledger (QRL) is a blockchain designed to withstand the computational attacks possible on other blockchains as the developments in quantum computing advance.
 baseurl: "" # the subpath of your site, e.g. /blog
