--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: qrledger
 github_username:  theQRL
 
+collections:
+  faqs:
+    output: true
+
+
 # Build settings
 markdown: kramdown
 theme: minima
